Added routing and templating features. Updated the use of factory to work in async mode.

--- a/public/logged-in-home.html
+++ b/public/logged-in-home.html
@@ -32,10 +32,10 @@
                                         <li><a href="#">Summary</a></li>
                                     </ul>
                                 </li>
-                                <li class="dropdown"><a href="#" data-toggle="dropdown" class="dropdown-toogle">Students <b class="caret"></b></a>
+                                <li class="dropdown"><a data-toggle="dropdown" class="dropdown-toogle">Students <b class="caret"></b></a>
                                     <ul class="dropdown-menu">
                                         <li><a href="#">New</a></li>
-                                        <li><a href="#">Reports</a></li>
+                                        <li><a href="#/student-attendsnce-list">Reports</a></li>
                                         <li><a href="#">Summary</a></li>
                                     </ul>
                                 </li>
@@ -70,56 +70,14 @@
                 </div>
             </div>
         </div>
-        <div id="notify-container" class="row" ng-controller="NotificationController as notify">
+        <div id="notify-container" class="row">
             <div class=" col-xs-12 col-lg-12">
                 <div role="alert" class="alert alert-info alert-dismissible">
-                    <button type="button" data-dismiss="alert" aria-label="Close" class="close"><span aria-hidden="true">×</span></button> Welcome <strong>{{currentUser.DisplayName}}!</strong> Update your profile.
+                    <button type="button" data-dismiss="alert" aria-label="Close" class="close"><span aria-hidden="true">×</span></button> Welcome <strong>Manoj Chalode!</strong> Update your profile.
                 </div>
             </div>
         </div>
-        <div id="app-container" class="row" ng-controller="UserProfileController as userProfile">
-            <div class="col-xs-12 col-lg-12 app-background">
-                <ul class="nav nav-tabs pts col-lg-6 col-lg-offset-3">
-                    <li role="presentation" class="active"><a href="#">Home</a></li>
-                    <li role="presentation"><a href="#">Profile</a></li>
-                    <li role="presentation"><a href="#">Messages</a></li>
-                </ul>
-                <div class="row">
-                    <div class="col-xs-12 col-lg-6 col-lg-offset-3 mts">
-                        <label for="display-name">Display Name</label>
-                        <input id="display-name" type="text" disabled="disabled" class="form-control col-xs-12 col-lg-4" ng-model="currentUser.DisplayName">
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-12 col-lg-6 col-lg-offset-3 mts">
-                        <label for="email-id">Email Id</label>
-                        <input id="email-id" type="email" disabled="disabled" class="form-control col-xs-12 col-lg-4" ng-model="currentUser.Email">
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-12 col-lg-6 col-lg-offset-3 mts">
-                        <label for="user-name">User Name</label>
-                        <input id="user-name" type="text" class="form-control col-xs-12 col-lg-4" placeholder="e.g. cool_john">
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-12 col-lg-6 col-lg-offset-3 mts">
-                        <label for="user-role">User Role</label>
-                        <select id="user-role" class="form-control col-xs-12 col-lg-4">
-                            <option>Select Role</option>
-                            <option>Admin</option>
-                            <option>Teacher</option>
-                            <option>Student</option>
-                            <option>Parent</option>
-                        </select>
-                    </div>
-                </div>
-                <div class="row pbs">
-                    <div class="col-xs-12 col-lg-6 col-lg-offset-3 mtl">
-                        <input type="button" id="btn-update-profile" class="btn btn-primary form-control" value="Update Profile">
-                    </div>
-                </div>
-            </div>
+        <div id="app-container" class="row app-background pbs" ng-view>
         </div>
     </div>
     <!-- scripts -->
@@ -168,11 +126,9 @@
     </script>
     <script type="text/javascript" src="/javascript/libraries/jquery.min.js"></script>
     <script type="text/javascript" src="/javascript/libraries/angular.min.js"></script>
+    <script type="text/javascript" src="/javascript/libraries/angular.route.min.js"></script>
     <script type="text/javascript" src="/javascript/libraries/bootstrap.min.js"></script>
     <script type="text/javascript" src="/javascript/application.js"></script>
-    <script type="text/javascript" src="/javascript/angular/factories/user-profile.js"></script>
-    <script type="text/javascript" src="/javascript/angular/controllers/user-profile.js"></script>
-    <script type="text/javascript" src="/javascript/angular/controllers/notification.js"></script>
 </body>
 
 </html>
