Changed the folder structure to support bootstrap glymphicons.

--- a/public/logged-in-home.html
+++ b/public/logged-in-home.html
@@ -6,8 +6,8 @@
     <title>home</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- css -->
-    <link rel="stylesheet" type="text/css" href="/stylesheets/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="/stylesheets/style.css">
+    <link rel="stylesheet" type="text/css" href="/css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
 
 <body>
@@ -127,7 +127,7 @@
     <script type="text/javascript" src="/javascript/libraries/jquery.min.js"></script>
     <script type="text/javascript" src="/javascript/libraries/angular.min.js"></script>
     <script type="text/javascript" src="/javascript/libraries/angular.route.min.js"></script>
-    <script type="text/javascript" src="/javascript/libraries/bootstrap.min.js"></script>
+    <script type="text/javascript" src="/javascript/libraries/bootstrap.js"></script>
     <script type="text/javascript" src="/javascript/application.js"></script>
 </body>
 
