re-factored server routes for response structure.

--- a/public/pages/logged-in-home.html
+++ b/public/pages/logged-in-home.html
@@ -27,7 +27,7 @@
                                 <li class="active"><a href="#">Home</a></li>
                                 <li class="dropdown"><a data-toggle="dropdown" class="dropdown-toogle pointer">Attendance <b class="caret"></b></a>
                                     <ul class="dropdown-menu">
-                                        <li><a href="#">New</a></li>
+                                        <li><a href="#/new-attendance">New</a></li>
                                         <li><a href="#">Reports</a></li>
                                         <li><a href="#">Summary</a></li>
                                     </ul>
@@ -35,7 +35,7 @@
                                 <li class="dropdown"><a data-toggle="dropdown" class="dropdown-toogle pointer">Students <b class="caret"></b></a>
                                     <ul class="dropdown-menu">
                                         <li><a href="#">New</a></li>
-                                        <li><a href="#/student-attendsnce-list">Reports</a></li>
+                                        <li><a href="#/student-attendance-list">Reports</a></li>
                                         <li><a href="#">Summary</a></li>
                                     </ul>
                                 </li>
@@ -133,6 +133,7 @@
     <script type="text/javascript" src="/javascript/angular/factories/attendance-report.js"></script>
     <script type="text/javascript" src="/javascript/angular/controllers/attendance-report.js"></script>
     <script type="text/javascript" src="/javascript/angular/controllers/attendance-details.js"></script>
+    <script type="text/javascript" src="/javascript/angular/controllers/new-attendance.js"></script>
 </body>
 
 </html>
