updated naming conventions.

--- a/public/pages/logged-in-home.html
+++ b/public/pages/logged-in-home.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE student-attendance-list>
 <html lang="en" data-ng-app="mark-it">
 
 <head>
@@ -35,7 +35,7 @@
                                 <li class="dropdown"><a data-toggle="dropdown" class="dropdown-toogle pointer">Students <b class="caret"></b></a>
                                     <ul class="dropdown-menu">
                                         <li><a href="#">New</a></li>
-                                        <li><a href="#/student-attendance-list">Reports</a></li>
+                                        <li><a href="#/attendance-report">Reports</a></li>
                                         <li><a href="#">Summary</a></li>
                                     </ul>
                                 </li>
@@ -130,9 +130,9 @@
     <script type="text/javascript" src="/javascript/libraries/bootstrap.js"></script>
     <script type="text/javascript" src="/javascript/application.js"></script>
     <script type="text/javascript" src="/javascript/angular/routes/routes.js"></script>
-    <script type="text/javascript" src="/javascript/angular/factories/attendance-report.js"></script>
+    <script type="text/javascript" src="/javascript/angular/factories/db-provider.js"></script>
     <script type="text/javascript" src="/javascript/angular/controllers/attendance-report.js"></script>
-    <script type="text/javascript" src="/javascript/angular/controllers/attendance-details.js"></script>
+    <script type="text/javascript" src="/javascript/angular/controllers/student-details.js"></script>
     <script type="text/javascript" src="/javascript/angular/controllers/new-attendance.js"></script>
 </body>
 
