--- a/public/pages/logged-in-home.html
+++ b/public/pages/logged-in-home.html
@@ -34,9 +34,9 @@
                                 </li>
                                 <li class="dropdown"><a data-toggle="dropdown" class="dropdown-toogle pointer">Students <b class="caret"></b></a>
                                     <ul class="dropdown-menu">
-                                        <li><a href="#">New</a></li>
+                                        <li><a href="#/students/add">New</a></li>
                                         <li><a href="#/attendance-report">Reports</a></li>
-                                        <li><a href="#">Summary</a></li>
+                                        <li><a href="#/students/all">List</a></li>
                                     </ul>
                                 </li>
                                 <li class="dropdown"><a data-toggle="dropdown" class="dropdown-toogle pointer">Reports <b class="caret"></b></a>
@@ -134,6 +134,8 @@
     <script type="text/javascript" src="/javascript/angular/controllers/attendance-report.js"></script>
     <script type="text/javascript" src="/javascript/angular/controllers/student-details.js"></script>
     <script type="text/javascript" src="/javascript/angular/controllers/new-attendance.js"></script>
+    <script type="text/javascript" src="/javascript/angular/controllers/new-student.js"></script>
+    <script type="text/javascript" src="/javascript/angular/controllers/student-list.js"></script>
 </body>
 
 </html>
