--- a/public/pages/page-not-found.html
+++ b/public/pages/page-not-found.html
@@ -1,13 +1,36 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE student-attendance-list>
+<html lang="en" data-ng-app="mark-it">
 
 <head>
     <meta charset="UTF-8">
-    <title>Expenditure-Pro</title>
+    <title>Home</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- css -->
+    <link rel="stylesheet" type="text/css" href="/css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
 
 <body>
+    <!-- html -->
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-xs-12 col-lg-12">
+                <div class="navbar navbar-default">
+                    <div class="container"><a href="/" class="navbar-brand">Mark It</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row app-background pbs">
+            <div class="col-xs-12 col-lg-8 col-lg-offset-2">
+                <div class="row">
+                    <div class="col-xs-12 col-lg-12">
+                        <h3 class="text-center">Requested page not found!</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
-<h1>Error 500 - Requested page not found!</h1>
 
 </html>
